--- a/RAW/package.json
+++ b/RAW/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
+    "@react-navigation/drawer": "^6.6.14",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.27",
@@ -27,7 +28,9 @@
     "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
