--- a/RAW/package.json
+++ b/RAW/package.json
@@ -13,8 +13,11 @@
     "@expo-google-fonts/montserrat": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.14",
-    "@react-navigation/native": "^6.1.15",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
+    "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.25",
     "@react-navigation/stack": "^6.3.27",
     "@types/react": "^18.2.65",
@@ -25,12 +28,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
-    "typescript": "^5.4.2",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.2"
+    "typescript": "^5.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
